--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,6 +16,7 @@ security:
         main:
             anonymous: ~
             pattern: ^/
+            provider: doctrine
             form_login:
                 login_path: login
                 check_path: login_check
@@ -25,5 +26,7 @@ security:
 
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/users, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER }
+    #
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
