#12 Tests Fixtures test, configuration. use SQLITE database

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,13 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+# Twig Configuration
+twig:
+    debug:            false
+    strict_variables: false
+
+# Doctrine Configuration
+doctrine:
+    dbal:
+        url: 'sqlite:///%kernel.root_dir%/../var/data/test.sqlite'
