--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 !/var/sessions
 /var/sessions/*
 !var/sessions/.gitkeep
+!/var/data
+/var/data/*
+!var/data/.gitkeep
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
