--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+login_check:
+    path: /login_check
+    methods: ["POST"]
+
+logout:
+    path: /logout
+    methods: ["GET"]
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
